sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:7: error: not found: value estPlusPetit
      if(!estPlusPetit(i,i+1)){
          ^AlgCocktailSort1:12: error: value foreach is not a member of Int
    for (i<-getNombreValeurs()-2){
                              ^AlgCocktailSort1:13: error: not found: value estPlusPetit
      if(!estPlusPetit(i-1,i)){
          ^