sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
  var estTriee=false
  while(!estTriee){
    estTriee=true
    for (i<-0 to getNombreValeurs()-2){
      if(!estPlusPetit(i,i+1)){
        echange(i,i+1)
        estTriee=false
      } 
    }
    for (i<-getNombreValeurs()-2){
      if(!estPlusPetit(i-1,i)){
        echange(i-1,i)
        estTriee=false
      }      
    }
  }
}